--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -36,7 +36,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: underspell/vasicavas
+          images: underspell/basicavas
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
