--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,7 +13,7 @@ on:
 env:  
   REGISTRY: docker.io
   IMAGE_NAME: ${{ github.repository }}
-
+runs-on: [self-hosted]
 jobs:
   build:
     runs-on: ubuntu-latest
