--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,7 +15,7 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 jobs:
   build:
-    #runs-on: [self-hosted]
+    runs-on: [ubuntu-latest]
     permissions:
       contents: read
       packages: write
