--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,7 +15,7 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 jobs:
   build:
-    runs-on: [ubuntu:22.04]
+    runs-on: ["ubuntu:22.04"]
     permissions:
       contents: read
       packages: write
